# model/model.go
@@ -89,8 +89,9 @@ type DriverType struct {
 	StorageArrayTypeID uint
 }
 
+//  ModuleType holds details about module used in application
 type ModuleType struct {
-	gorm.Model
+	gorm.Model // This already contains ID field
 	Name       string
 	Version    string
 	Standalone bool
